<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_corner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/start_guide_phone_landscape_15_tablet_15_other_0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_corner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/end_guide_phone_landscape_85_tablet_85_other_100" />

        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/banner"
            app:layout_constraintEnd_toEndOf="@id/end_corner"
            app:layout_constraintStart_toStartOf="@id/start_corner"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_beautiful_photo"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/start_corner"
            app:layout_constraintTop_toBottomOf="@id/banner"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginEnd="4dp"
            app:layout_goneMarginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"/>

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toStartOf="@id/start_corner"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginEnd="4dp"
            app:layout_goneMarginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_january_2021"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@id/date_label"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBaseline_toBaselineOf="@id/date_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginEnd="4dp"
            app:layout_goneMarginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"/>


        <ImageView
            android:id="@+id/poster"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="center"
            android:src="@drawable/banner"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            app:layout_constraintEnd_toEndOf="@id/end_corner"
            app:layout_constraintTop_toBottomOf="@id/banner" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_section_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="date, date_label, poster, banner"
            app:barrierDirection="bottom"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/i_ve_done_this_photo_in_the_morning"
            app:layout_constraintStart_toStartOf="@id/start_corner"
            app:layout_constraintEnd_toEndOf="@id/end_corner"
            app:layout_constraintTop_toBottomOf="@id/title_section_bottom_barrier"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

        <TextView
            android:id="@+id/tags_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/start_corner"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:text="@string/tags"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="tag1, tag2, tag3, tag4, tag5, tag6"
            app:layout_constraintTop_toBottomOf="@id/tags_label"
            app:layout_constraintStart_toStartOf="@id/start_corner"
            app:layout_constraintEnd_toEndOf="@id/end_corner"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"

            app:flow_horizontalStyle="packed"
            app:flow_verticalGap="8dp"
            app:flow_horizontalGap="8dp"
            app:flow_wrapMode="chain"
            app:flow_horizontalBias="0"/>

        <TextView
            android:id="@+id/tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="#BBB"
            android:text="@string/morning"/>

        <TextView
            android:id="@+id/tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="#BBB"
            android:text="@string/flowers"/>

        <TextView
            android:id="@+id/tag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="#BBB"
            android:text="@string/winter"/>

        <TextView
            android:id="@+id/tag4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="#BBB"
            android:text="@string/cold"/>

        <TextView
            android:id="@+id/tag5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="#BBB"
            android:text="@string/sweat_home"/>

        <TextView
            android:id="@+id/tag6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="#BBB"
            android:text="@string/amazing_photo"/>


        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            app:layout_constraintStart_toStartOf="@id/start_corner"
            app:layout_constraintEnd_toStartOf="@id/share"
            app:layout_constraintTop_toBottomOf="@id/tags"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginEnd="8dp"
            app:layout_goneMarginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintStart_toEndOf="@id/like"
            app:layout_constraintEnd_toStartOf="@id/download"
            app:layout_constraintTop_toBottomOf="@id/tags"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_goneMarginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            app:layout_goneMarginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            app:layout_constraintStart_toEndOf="@id/share"
            app:layout_constraintEnd_toEndOf="@id/end_corner"
            app:layout_constraintTop_toBottomOf="@id/tags"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            app:layout_goneMarginStart="@dimen/phone_16_tablet_small_24_tablet_small_land_40_tablet_big_40"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>